kubernetesexamples/springexamples/springforkuberingress/myexample-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mykuber-ingress-spring
  annotations:      
      nginx.ingress.kubernetes.io/rewrite-target: /$2   
      
spec:
  ingressClassName: nginx
  rules:
    - host: mykuber.ingress.com
      http:
        paths:
          - path: /v1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: springforkuberingressimagedeployment1
                port:
                  number: 8080
          - path: /v2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: springforkuberingressimagedeployment2
                port:
                  number: 8080
