kubernetesexamples/springexamples/springforkuberingress/myexample-lb-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mykuber-cluster-ingress-spring
  annotations:
      kubernetes.io/ingress.class: nginx  
      nginx.ingress.kubernetes.io/rewrite-target: /$2   
      
spec:
  ingressClassName: nginx
  rules:
    - host: mykubercluster.ingress.com
      http:
        paths:
          - path: /v1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: springforkuberingressimagedeploymentlb1
                port:
                  number: 8080
          - path: /v2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: springforkuberingressimagedeploymentlb2
                port:
                  number: 8080
