kubernetesexamples/springexamples/springforkuberingress/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myspringforkuberingressimingress  
spec:
  ingressClassName: nginx
  rules:
    - host: myspringforkuberingressim.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springforkuberingressimdeployment1
                port:
                  number: 8081
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: springforkuberingressimdeployment2
                port:
                  number: 8083
